--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
     rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Destinize</title>
+  <style>
+    ::selection {
+      background-color: rgba(120, 157, 252, 1);
+      color: white;
+      -webkit-text-fill-color: white;
+    }
+
+    ::-moz-selection {
+      background-color: rgba(120, 157, 252, 1);
+      color: white;
+      -webkit-text-fill-color: white;
+    }
+
+    ::-webkit-selection {
+      background-color: rgba(120, 157, 252, 1);
+      color: white;
+      -webkit-text-fill-color: white;
+    }
+  </style>
 </head>
 
 <body>
